--- a/dashboard.ipynb
+++ b/dashboard.ipynb
@@ -307,7 +307,7 @@
     "\n",
     "# fig.update_geos( fitbounds=\"locations\", visible=True)\n",
     "# fig.write_html('maptest.html',auto_open=True)\n",
-    "missing_EU = ['Belgium','Finland','Estonia','Austria','Luxembourg','Greece','Malta','Netherlands', ,'Hungary','Bulgaria','Latvia','Lithuania','Slovenia','Croatia','Ireland','Portugal','Slovakia','Denmark','Polan']"
+    "missing_EU = ['Belgium','Finland','Estonia','Austria','Luxembourg','Greece','Malta','Netherlands','Hungary','Bulgaria','Latvia','Lithuania','Slovenia','Croatia','Ireland','Portugal','Slovakia','Denmark','Polan']"
    ]
   },
   {
