--- a/Code_Project_v2.ipynb
+++ b/Code_Project_v2.ipynb
@@ -100700,37 +100700,41 @@
     "\n",
     "# add traces for every combination of country, sector and year.\n",
     "\n",
+    "def traces(Countries, Year):\n",
+    "    z = Transport_Total[(Transport_Total.country == k) & (Transport_Total.year == i)]\n",
+    "    Int_Av = Transport_Sector[(Transport_Sector.country == k) & (Transport_Sector.year == i) & (Transport_Sector.sector == 'International Aviation')]\n",
+    "    Do_Av = Transport_Sector[(Transport_Sector.country == k) & (Transport_Sector.year == i) & (Transport_Sector.sector == 'Domestic Aviation')]\n",
+    "    Gr_Trans = Transport_Sector[(Transport_Sector.country == k) & (Transport_Sector.year == i) & (Transport_Sector.sector == 'Ground Transport')]\n",
+    "    lop = fig.add_traces(\n",
+    "                [\n",
+    "                go.Scatter(x=list(z.Date2),\n",
+    "                    y=list(z.co2),\n",
+    "                    name= k + ' ' + i + ' ' + 'Total',\n",
+    "                    visible = True,\n",
+    "                    legendgroup = 1),        \n",
+    "                go.Scatter(x=list(Int_Av.Date2),\n",
+    "                        y=list(Int_Av.co2),\n",
+    "                        name= k + ' ' + i + ' ' + 'International Aviation',\n",
+    "                        visible = True,\n",
+    "                        legendgroup = 2),\n",
+    "                go.Scatter(x=list(Do_Av.Date2),\n",
+    "                        y=list(Do_Av.co2),\n",
+    "                        name= k + ' ' + i + ' ' + 'Domestic Aviation',\n",
+    "                        visible = True,\n",
+    "                        legendgroup = 3),\n",
+    "                go.Scatter(x=list(Gr_Trans.Date2),\n",
+    "                        y=list(Gr_Trans.co2),\n",
+    "                        name= k + ' ' + i + ' ' + 'Ground Transport',\n",
+    "                        visible = True,\n",
+    "                        legendgroup = 4)]\n",
+    "            , rows=list(range(1,5)), cols=[1,1,1,1]\n",
+    "            )\n",
+    "    return lop\n",
+    "\n",
+    "    \n",
     "for k in Countries:\n",
     "    for i in Years:\n",
-    "        z = Transport_Total[(Transport_Total.country == k) & (Transport_Total.year == i)]\n",
-    "        Int_Av = Transport_Sector[(Transport_Sector.country == k) & (Transport_Sector.year == i) & (Transport_Sector.sector == 'International Aviation')]\n",
-    "        Do_Av = Transport_Sector[(Transport_Sector.country == k) & (Transport_Sector.year == i) & (Transport_Sector.sector == 'Domestic Aviation')]\n",
-    "        Gr_Trans = Transport_Sector[(Transport_Sector.country == k) & (Transport_Sector.year == i) & (Transport_Sector.sector == 'Ground Transport')]\n",
-    "        lop = fig.add_traces(\n",
-    "                    [\n",
-    "                    go.Scatter(x=list(z.Date2),\n",
-    "                        y=list(z.co2),\n",
-    "                        name= k + ' ' + i + ' ' + 'Total',\n",
-    "                        visible = True,\n",
-    "                        legendgroup = 1),        \n",
-    "                    go.Scatter(x=list(Int_Av.Date2),\n",
-    "                            y=list(Int_Av.co2),\n",
-    "                            name= k + ' ' + i + ' ' + 'International Aviation',\n",
-    "                            visible = True,\n",
-    "                            legendgroup = 2),\n",
-    "                    go.Scatter(x=list(Do_Av.Date2),\n",
-    "                            y=list(Do_Av.co2),\n",
-    "                            name= k + ' ' + i + ' ' + 'Domestic Aviation',\n",
-    "                            visible = True,\n",
-    "                            legendgroup = 3),\n",
-    "                    go.Scatter(x=list(Gr_Trans.Date2),\n",
-    "                            y=list(Gr_Trans.co2),\n",
-    "                            name= k + ' ' + i + ' ' + 'Ground Transport',\n",
-    "                            visible = True,\n",
-    "                            legendgroup = 4)]\n",
-    "                , rows=list(range(1,5)), cols=[1,1,1,1]\n",
-    "                )\n",
-    "\n",
+    "        traces(Countries, Years)\n",
     "# create dropdown menu\n",
     "\n",
     "list_updatemenus = []\n",
