--- a/main.ipynb
+++ b/main.ipynb
@@ -4,12 +4,24 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "^C\n"
+     ]
+    }
+   ],
    "source": [
     "import streamlit as st\n",
-    "import json\n",
     "import plotly.express as px\n",
-    "import os\n",
+    "import plotly.graph_objects as go\n",
+    "from plotly.subplots import make_subplots\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from numpy import datetime_as_string\n",
+    "import datetime\n",
     "!Powershell.exe -Command \"streamlit run b:\\Documenten\\TU_Delft\\Master\\Module_1\\Python\\Assignment\\TIL6022\\dashboard.py\"\n",
     "#https://daniellewisdl-streamlit-cheat-sheet-app-ytm9sg.streamlitapp.com/\n",
     "\n"
