--- a/dashboard_v3.ipynb
+++ b/dashboard_v3.ipynb
@@ -1,8 +1,67 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Project Group - 4\n",
+    "\n",
+    "Members: Tim Traas, Max Hendriks, Wouter Sougé\n",
+    "\n",
+    "Student numbers: 4653823, 4694333, 4957830"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Research Objective\n",
+    "\n",
+    "We will research the following question: \"What is the effect of COVID-19 on different transport sectors, looking at CO2 emissions?\"\n",
+    "\n",
+    "To answer this research question we will look into the dataset found [1]. This dataset shows emissions for different sectors, including transport sectors for major countries worldwide. Using this dataset we would like to visualize an online interactive dashboard including:\n",
+    "\n",
+    "A world map visualizing the emissions per country with a drop-down menu to select dates and specific countries.\n",
+    "Bar graphs visualizing emissions per country on a fixed time period.\n",
+    "Sectorial effects per country group\n",
+    "Analysis of peaks and comparing this to measures taken by governments\n",
+    "The major transport sectors that can be found are aviation, ground transport and shipping.\n",
+    "\n",
+    "References: \n",
+    "1. Liu, Z., Ciais, P., Deng, Z. et al. Near-real-time monitoring of global CO2 emissions reveals the effects of the COVID-19 pandemic. Nat Commun 11, 5172 (2020). https://doi.org/10.1038/s41467-020-18922-7 \n",
+    "2. https://datahub.io/core/geo-countries#resource-countries"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Contribution Statement\n",
+    "\n",
+    "*Be specific. Some of the tasks can be coding (expect everyone to do this), background research, conceptualisation, visualisation, data analysis, data modelling*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Tim Traas**:\n",
+    "\n",
+    "**Max Hendriks**:\n",
+    "\n",
+    "**Wouter Sougé**:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Used"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,30 +91,29 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'1.5.1'"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "pd.__version__"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-11-10 18:25:52.362 \n",
+      "  \u001b[33m\u001b[1mWarning:\u001b[0m to view this Streamlit app on a browser, run it with the following\n",
+      "  command:\n",
+      "\n",
+      "    streamlit run /Users/woutersouge/opt/anaconda3/envs/TIL6022/lib/python3.10/site-packages/ipykernel_launcher.py [ARGUMENTS]\n"
+     ]
+    }
+   ],
    "source": [
     "given_time = st.selectbox('Select time period to visualise', ['Day','Month','Quartile','Year'])\n",
     "given_time = 'Week'\n",
@@ -40159,7 +40217,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "912e563e9dcba4627191cc3d93bbeccfd6aeff90cb759bc69d8ed01eba93c0fe"
+    "hash": "d3d338b7fb9c886030ebbbe803d7f6b1aa32e3dde6a6cb8a2233600fe72de6a3"
    }
   }
  },
