--- a/runstreamlit.ipynb
+++ b/runstreamlit.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "^C\n"
+      "zsh:1: command not found: Powershell.exe\n"
      ]
     }
    ],
@@ -50,7 +50,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "912e563e9dcba4627191cc3d93bbeccfd6aeff90cb759bc69d8ed01eba93c0fe"
+    "hash": "d3d338b7fb9c886030ebbbe803d7f6b1aa32e3dde6a6cb8a2233600fe72de6a3"
    }
   }
  },
